--- a/gerenciador-financeiro/src/styles.scss
+++ b/gerenciador-financeiro/src/styles.scss
@@ -6,6 +6,7 @@
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 @use 'styles/theme-colors' as theme-colors;
+@use 'styles/overrides/toolbar.scss';
 
 html {
   @include mat.theme((
