--- a/gerenciador-financeiro/src/app/features/home/home.html
+++ b/gerenciador-financeiro/src/app/features/home/home.html
@@ -1,7 +1,9 @@
 <app-balance [transactions]="transactions()"></app-balance>
 
-@for (item of transactions(); track item) {
-    <app-transaction-item [transaction]="item"></app-transaction-item>
-} @empty {
-    <app-no-transaction/>
-}
+<div class="transaction">
+    @for (item of transactions(); track item) {
+        <app-transaction-item [transaction]="item"></app-transaction-item>
+    } @empty {
+        <app-no-transaction/>
+    }
+</div>
