--- a/gerenciador-financeiro/src/app/features/home/home.html
+++ b/gerenciador-financeiro/src/app/features/home/home.html
@@ -1,8 +1,8 @@
 <app-balance [transactions]="transactions()"></app-balance>
 
-<div class="transaction">
+<div class="transactions">
     @for (item of transactions(); track item) {
-        <app-transaction-item [transaction]="item"></app-transaction-item>
+        <app-transaction-item class="transaction" [transaction]="item"></app-transaction-item>
     } @empty {
         <app-no-transaction/>
     }
