--- a/gerenciador-financeiro/src/app/features/home/pages/create-or-edit/create-or-edit.component.html
+++ b/gerenciador-financeiro/src/app/features/home/pages/create-or-edit/create-or-edit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+<form [formGroup]="form()" (ngSubmit)="submit()">
     
     <div class="mb-24">
         <mat-button-toggle-group formControlName="type">
@@ -6,7 +6,7 @@
             <mat-button-toggle [value]="transactionTypes.INCOME">Ganho</mat-button-toggle>
             
         </mat-button-toggle-group>
-        @if (form.controls.type.hasError('required')) {
+        @if (form().controls.type.hasError('required')) {
             <mat-error>Campo obrigatório</mat-error>
         }
     </div>
@@ -19,7 +19,7 @@
             formControlName="title"
             required
         />
-        @if (form.controls.title.hasError('required')) {
+        @if (form().controls.title.hasError('required')) {
             <mat-error>Campo obrigatório</mat-error>
         }
     </mat-form-field>
@@ -35,14 +35,12 @@
         />
         <span matTextPrefix>R$ &nbsp;</span>
 
-        @if (form.controls.value.hasError('required')) {
+        @if (form().controls.value.hasError('required')) {
             <mat-error>Campo obrigatório</mat-error>
         }
     </mat-form-field>
 
-    {{ form.value | json }}
-
     <div class="submit-container">
-        <button type="submit" mat-flat-button="filled" [disabled]="form.invalid">Salvar</button>
+        <button type="submit" mat-flat-button="filled" [disabled]="form().invalid">Salvar</button>
     </div>
 </form>
