feat: cria variaveis Sass ao longo do projeto

--- a/gerenciador-financeiro/src/styles/common/container.scss
+++ b/gerenciador-financeiro/src/styles/common/container.scss
@@ -1,3 +1,5 @@
+@use '../variables' as vars;
+
 .container {
     display: flex;
     justify-content: center;
@@ -7,6 +9,6 @@
     
     .container-content {
         width: 100%;
-        max-width: 750px;
+        max-width: vars.$content-width;
     }
 }
