--- a/gerenciador-financeiro/src/app/core/layout/components/header/header.html
+++ b/gerenciador-financeiro/src/app/core/layout/components/header/header.html
@@ -1,5 +1,11 @@
 <header>
-    <mat-toolbar>
-        <span>My Application</span>
+    <mat-toolbar class="toolbar">
+        <div class="toolbar-content">
+            <span>Gerenciador Financeiro</span>
+
+            @if(true) {
+                <button matButton="filled" class="button-logout"> Sair</button>
+            }
+        </div>
     </mat-toolbar>
 </header>
