--- a/gerenciador-financeiro/src/app/core/layout/components/header/header.html
+++ b/gerenciador-financeiro/src/app/core/layout/components/header/header.html
@@ -3,8 +3,8 @@
         <div class="toolbar-content">
             <span>Gerenciador Financeiro</span>
 
-            @if(true) {
-                <button matButton="filled" class="button-logout"> Sair</button>
+            @if(isLoggedIn()) {
+                <button matButton="filled" class="button-logout" (click)="logout()"> Sair</button>
             }
         </div>
     </mat-toolbar>
