feat: cria diretiva composition api de atributo para juntar duas outras

--- a/gerenciador-financeiro/src/app/features/home/pages/create-or-edit/create-or-edit.component.html
+++ b/gerenciador-financeiro/src/app/features/home/pages/create-or-edit/create-or-edit.component.html
@@ -11,7 +11,7 @@
         }
     </div>
 
-    <mat-form-field appFullWidth appMarginBottom>
+    <mat-form-field>
         <mat-label>Title</mat-label>
         <input
             matInput
@@ -24,7 +24,7 @@
         }
     </mat-form-field>
 
-     <mat-form-field appFullWidth appMarginBottom>
+     <mat-form-field>
         <mat-label>Valor</mat-label>
         <input
             matInput
