--- a/gerenciador-financeiro/src/app/features/home/pages/list/components/transaction-item/transaction-item.html
+++ b/gerenciador-financeiro/src/app/features/home/pages/list/components/transaction-item/transaction-item.html
@@ -1,5 +1,13 @@
 <mat-card class="card">
     <div>
+        <ng-container *isIncome="transaction().type; else elseTemplate">
+            è ganho
+        </ng-container>
+
+        <ng-template #elseTemplate>
+            é gasto
+        </ng-template>
+
         <div class="card-title">
             {{ transaction().title }}
         </div>
