--- a/gerenciador-financeiro/src/app/core/layout/layout.html
+++ b/gerenciador-financeiro/src/app/core/layout/layout.html
@@ -1,7 +1,15 @@
 <app-header></app-header>
 
-<div class="container">
-    <div class="container-content">
-        <router-outlet></router-outlet>
-    </div>
-</div>
+<mat-sidenav-container>
+    <mat-sidenav class="sidenav" opened="" mode="over">
+        algo aqui
+    </mat-sidenav>
+
+    <mat-sidenav-content class="sidenav-container">
+        <div class="container">
+            <div class="container-content">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
