--- a/gerenciador-financeiro/src/styles/common/container.scss
+++ b/gerenciador-financeiro/src/styles/common/container.scss
@@ -3,9 +3,8 @@
 .container {
     display: flex;
     justify-content: center;
-    margin-top: 24px;
-    margin-bottom: 24px;
-    padding-left: 24px;
+
+    padding-top: 24px;
     
     .container-content {
         width: 100%;
