--- a/gerenciador-financeiro/src/app/core/layout/layout.html
+++ b/gerenciador-financeiro/src/app/core/layout/layout.html
@@ -2,7 +2,16 @@
 
 <mat-sidenav-container>
     <mat-sidenav class="sidenav" opened="" mode="over">
-        algo aqui
+        <mat-nav-list>
+            @for (link of links(); track link) {
+                <a 
+                    mat-list-item
+                    [routerLink]="link.url"
+                    routerLinkActive="mdc-list-item--activated"
+                    [routerLinkActiveOptions]="{ exact: true}"
+                    >{{ link.label }}</a>
+            }
+        </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content class="sidenav-container">
