--- a/gerenciador-financeiro/src/app/core/layout/layout.html
+++ b/gerenciador-financeiro/src/app/core/layout/layout.html
@@ -1,17 +1,8 @@
 <app-header></app-header>
 
-<mat-sidenav-container>
+<mat-sidenav-container class="sidenav-container">
     <mat-sidenav class="sidenav" opened="" mode="over">
-        <mat-nav-list>
-            @for (link of links(); track link) {
-                <a 
-                    mat-list-item
-                    [routerLink]="link.url"
-                    routerLinkActive="mdc-list-item--activated"
-                    [routerLinkActiveOptions]="{ exact: true}"
-                    >{{ link.label }}</a>
-            }
-        </mat-nav-list>
+        <app-sidenav-items></app-sidenav-items>
     </mat-sidenav>
 
     <mat-sidenav-content class="sidenav-container">
