feat: Move a ação de logout para dentro do sidbar

--- a/gerenciador-financeiro/src/app/core/layout/components/sidenav-items/sidenav-items.component.html
+++ b/gerenciador-financeiro/src/app/core/layout/components/sidenav-items/sidenav-items.component.html
@@ -9,3 +9,9 @@
   </a>
   }
 </mat-nav-list>
+
+@if(isLoggedIn()) {
+<mat-action-list>
+  <button mat-list-item (click)="logout()">Sair</button>
+</mat-action-list>
+}
