refactor: move botão de logout para uma diretiva de atributo

--- a/gerenciador-financeiro/src/app/core/layout/layout.html
+++ b/gerenciador-financeiro/src/app/core/layout/layout.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav class="sidenav" opened="" mode="over">
+    <mat-sidenav class="sidenav" opened="" mode="side">
         <app-sidenav-items></app-sidenav-items>
     </mat-sidenav>
 
