--- a/gerenciador-financeiro/src/app/core/layout/components/sidenav-items/sidenav-items.component.html
+++ b/gerenciador-financeiro/src/app/core/layout/components/sidenav-items/sidenav-items.component.html
@@ -12,6 +12,6 @@
 
 @if(isLoggedIn()) {
 <mat-action-list>
-  <button mat-list-item (click)="logout()">Sair</button>
+  <button mat-list-item appLogout>Sair</button>
 </mat-action-list>
 }
