--- a/gerenciador-financeiro/src/app/core/layout/layout.html
+++ b/gerenciador-financeiro/src/app/core/layout/layout.html
@@ -1,15 +1,9 @@
 <app-header></app-header>
 
-<mat-sidenav-container class="sidenav-container">
-    <mat-sidenav class="sidenav" opened="" mode="side">
-        <app-sidenav-items></app-sidenav-items>
-    </mat-sidenav>
-
-    <mat-sidenav-content class="sidenav-container">
-        <div class="container">
-            <div class="container-content">
-                <router-outlet></router-outlet>
-            </div>
+<app-sidenav>
+    <div class="container">
+        <div class="container-content">
+            <router-outlet></router-outlet>
         </div>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+    </div>
+</app-sidenav>
