--- a/gerenciador-financeiro/src/app/core/layout/components/header/header.html
+++ b/gerenciador-financeiro/src/app/core/layout/components/header/header.html
@@ -1,5 +1,10 @@
 <header>
     <mat-toolbar class="toolbar">
+        @if(isMobile()) {
+            <button matIconButton>
+                <mat-icon class="menu-icon" (click)="toggleSidenavVisibility()">menu</mat-icon>
+            </button>
+        }
         <div class="toolbar-content">
             <span>Gerenciador Financeiro</span>
         </div>
