feat: Cria componente para separa botão buger e adiciona ação para fechar sidenav quando selecionado rota

--- a/gerenciador-financeiro/src/app/core/layout/components/header/header.html
+++ b/gerenciador-financeiro/src/app/core/layout/components/header/header.html
@@ -1,10 +1,6 @@
 <header>
     <mat-toolbar class="toolbar">
-        @if(isMobile()) {
-            <button matIconButton>
-                <mat-icon class="menu-icon" (click)="toggleSidenavVisibility()">menu</mat-icon>
-            </button>
-        }
+            <app-toggle-sidenav-visibility/>
         <div class="toolbar-content">
             <span>Gerenciador Financeiro</span>
         </div>
