feat: Move listagem de trasações para novo módulo de Transações

--- a/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.html
+++ b/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.html
@@ -1,7 +1,5 @@
-<app-balance [transactions]="items()"></app-balance>
-
 <div class="actions">
-    <a matButton="filled" routerLink="create">Criar transaction</a>
+    <a matButton="filled" routerLink="create/new">Criar transaction</a>
 </div>
 
 <app-transactions-container class="transactions" [transactions]="items()">
