--- a/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.html
+++ b/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.html
@@ -1,5 +1,6 @@
 <div class="actions">
-    <a matButton="filled" routerLink="create/new">Criar transaction</a>
+    <app-search class="search"></app-search>
+    <a class="add-transaction" matButton="filled" routerLink="create/new">Criar transaction</a>
 </div>
 
 <app-transactions-container class="transactions" [transactions]="items()">
