--- a/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.scss
+++ b/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.scss
@@ -11,10 +11,31 @@
 
 .actions {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 24px 0;
 
+    .search {
+        order: 2; 
+    }
+    
+    .add-transaction {
+        order: 1;
+        margin-bottom: 24px;
+    }
+
     @include mq.media-query(sm) {
-        justify-content: flex-end;
+        flex-direction: row;
+
+        .search {
+            order: 1; 
+        }
+    
+        .add-transaction {
+            order: 2;
+            margin-bottom: 0;
+
+            margin-left: auto;
+        }
     }
 }
