feat: Usando Model input

--- a/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.html
+++ b/gerenciador-financeiro/src/app/features/transactions/pages/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="actions">
-    <app-search class="search"></app-search>
+    <app-search class="search" [(searchText)]="searchText"></app-search>
     <a class="add-transaction" matButton="filled" routerLink="create/new">Criar transaction</a>
 </div>
 
