feat: Adiciona @defer block e @error

--- a/gerenciador-financeiro/src/app/features/home/home.component.html
+++ b/gerenciador-financeiro/src/app/features/home/home.component.html
@@ -16,4 +16,6 @@
     <div>
         <button (click)="canLoadComponent.set(true)">Clique usando when</button>
     </div>
+} @error {
+    <p>Erro ao carregar o componente!</p>
 }
