--- a/gerenciador-financeiro/src/app/features/home/home.component.html
+++ b/gerenciador-financeiro/src/app/features/home/home.component.html
@@ -1,21 +1,26 @@
 <app-balance [transactions]="transactions()"></app-balance>
 
-@defer(when canLoadComponent(); on interaction(interactionClock)) {
-    <app-pie-chart [config]="chartConfig()"></app-pie-chart>
-} @loading(minimum 2s) {
-    <p>Carregando  conteúdo</p>
-} @placeholder(minimum 1s) {
-    <div>
-        <button>Clique inválido</button>
-    </div>
-    
-    <div>
-        <button #interactionClock>Clique usando interaction</button>
-    </div>
-
-    <div>
-        <button (click)="canLoadComponent.set(true)">Clique usando when</button>
-    </div>
-} @error {
-    <p>Erro ao carregar o componente!</p>
-}
+<div class="chart-container">
+    @defer(when canLoadComponent(); on interaction(interactionClock)) {
+        <mat-card class="card">
+            <app-pie-chart [config]="chartConfig()"></app-pie-chart>
+        </mat-card>
+    } @loading(minimum 2s) {
+        <mat-card class="card">
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </mat-card>
+    } @placeholder(minimum 1s) {
+        <mat-card class="card">
+            <button matButton=filled>Clique inválido</button>
+        
+            <button matButton=filled #interactionClock>Clique usando interaction</button>
+        
+            <button matButton=filled (click)="canLoadComponent.set(true)">Clique usando when</button>
+        </mat-card>
+    } @error {
+        <mat-card class="card">
+            <mat-icon>error</mat-icon>
+            O componente não foi carregado corretamente! Verifique sua conexão com a internet.
+        </mat-card>
+    }
+</div>
